style.css
:root {
  --link-color: #444444;
  --light: #fff;
  --dark: #000;
  --text-color: #232323;
  --gray-dark: #343a40;
  --first-bg-color: #f8f8f8;
  --second-bg-color: #000000;
  --border-color: #c0bfbf;
  --font-family-Manrope: "Manrope", sans-serif;
  --font-family-roboto: "Roboto", sans-serif;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  width: 100%;
  height: auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0px 0px 25px;
  padding: 0px;
  letter-spacing: 0;
  font-weight: 400;
  font-family: var(--font-family-Manrope);
}

li {
  list-style: none;
}

a {
  text-decoration: none;
}

/* header */

header {
  height: 80px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 5rem;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1000;
}

.header-links {
  display: flex;
  gap: 30px;
}

.nav-bar,
.nav-bar a {
  display: flex;
  gap: 30px;
  font-weight: 400;
  font-size: 18px;
  text-transform: capitalize;
  font-family: var(--font-family-roboto);
  color: var(--link-color);
}

#check {
  display: none;
}

.icons {
  position: absolute;
  right: 8rem;
  top: 1.7rem;
  font-size: 2.8rem;
  color: #6f6f6f;
  cursor: pointer;
  display: none;
  z-index: 10000;
}

.logo {
  font-size: 1.5rem;
  font-family: var(--font-family-Manrope);
  font-weight: 600;
  color: var(--link-color);
}

@media (max-width: 1200px) {
  .icons {
    display: inline-flex;
  }

  .icons #close-icon {
    display: none;
  }

  #check:checked ~ .icons #menu-icon {
    display: none;
  }

  #check:checked ~ .icons #close-icon {
    display: block;
  }

  .nav-bar {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 0;
    background: var(--light);
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
    overflow: hidden;
    transition: 0.3s ease;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
  }

  #check:checked ~ .nav-bar {
    height: 100vh;
  }

  .nav-bar a {
    display: block;
    font-size: 1.1rem;
    margin: 1.5rem 0;
    text-align: center;
    transform: translateY(-100vh);
    transition: 0.3 ease;
  }

  #check:checked ~ .nav-bar a {
    transform: translateY(0);
  }
}

/* Hero */

#hero {
  width: 100%;
  height: 100%;
  display: flex;
}

.hero-bg-img {
  width: 50%;
  height: 100%;
  overflow: hidden;
}

.hero-bg-img img {
  display: block;
  max-width: 100%;
  height: auto;
}

.hero-info {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  padding-left: 7rem;
  padding-right: 7rem;
}

.hero-info h1 {
  max-width: 400px;
  font-size: clamp(45px, 5.5vw, 82px);
  line-height: 1.1;
  font-weight: 700;
  color: var(--text-color);
}

.hero-info .btn {
  width: 170px;
  padding: 10px 20px;
  font-size: 0.8rem;
  color: var(--light);
  background-color: var(--dark);
  border: solid 2px var(--dark);
  font-weight: 700;
  line-height: inherit;
  letter-spacing: 4px;
  font-family: var(--font-family-Manrope);
  transition: all 0.5s ease-in-out;
}

.hero-info .btn:hover {
  background-color: var(--light);
  color: var(--dark);
}

@media (max-width: 1000px) {
  #hero {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .hero-bg-img {
    width: 100%;
    height: 100%;
    overflow: hidden;
    width: fit-content;
  }

  .hero-info {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
  }

  .hero-info h1 {
    max-width: 600px;
    font-size: clamp(1rem, 9vw, 25rem);
    line-height: 1.1;
    font-weight: 700;
    color: var(--text-color);
    text-align: center;
  }
}

/* services */

#services {
  width: 100%;
  height: 100%;
  background-color: var(--first-bg-color);
  padding: 150px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.services-head {
  width: 80%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.services-head > h1 {
  font-family: var(--font-family-Manrope);
  font-size: 55px;
  font-weight: 501;
  color: var(--text-color);
}

.line-gray {
  height: 0.5px;
  width: 111px;
  border-bottom: var(--border-color) solid 0.5px;
  margin: 10px 0;
}

.services-head > p {
  font-size: medium;
  font-weight: 400;
  color: var(--gray-dark);
  margin: 25px 0;
  font-family: var(--font-family-Manrope);
}

.services-row {
  overflow-x: scroll;
  overflow-y: hidden;
  width: 1140px;
  min-height: 224px;
}

.services-row .items {
  width: 300vw;
  height: 204px;
  display: flex;
  gap: 50px;
  padding: 20px;
  cursor: url(swipe-black.png), move;
}

.services-row .item {
  width: 247.5px;
  height: 177px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.services-row .item > h2 {
  font-size: 26px;
  line-height: 33px;
  font-weight: 550;
  font-family: var(--font-family-Manrope);
  margin-top: 20px;
}

.services-row .item > p {
  font-size: 18px;
  font-weight: 400;
  line-height: 1.5;
  color: var(--link-color);
  font-family: var(--font-family-Manrope);
  text-align: center;
}

/* features */

#features {
  width: 100%;
  height: 100%;
  display: flex;
}

.features-info,
.features-img {
  width: 50%;
}

.features-img img {
  display: block;
  max-width: 100%;
  height: auto;
  overflow: hidden;
}

.features-info .line-gray {
  width: 50px;
  margin: 35px 0;
}

.features-info {
  margin-top: 4.5rem;
  display: flex;
  justify-content: center;
}

.container h1 {
  font-size: 60px;
  font-family: var(--font-family-Manrope);
  font-weight: 550;
  color: var(--text-color);
}

.container > p {
  font-size: medium;
  font-weight: 400;
  color: var(--gray-dark);
  margin: 25px 0 70px;
  font-family: var(--font-family-Manrope);
}

.content h2 {
  font-size: 25px;
  line-height: 33px;
  font-weight: 700;
  color: var(--text-color);
  margin: 35px 0;
}
/* ... */

